rename split_sdr_value to unwrap_as_rate_sdr, add corresponding wrap_as_rate_sdr reverse func

--- a/hima/experiments/temporal_pooling/configs/se_off.yaml
+++ b/hima/experiments/temporal_pooling/configs/se_off.yaml
@@ -84,6 +84,21 @@ sp:
     expected_normal_overlap_frequency: 0.2
     min_activation_threshold: 6
 
+  gse:
+    _type_: sp.gse
+    seed: ???
+    feedforward_sds: ???
+    adapt_to_ff_sparsity: True
+    output_sds: ???
+    init_radius: 20.0
+    inhibitory: 0.12
+    # linear | sqrt
+    match_policy: sqrt
+    learning_rate: 0.01
+    # pair | all
+    learning_set: all
+    neg_hebb_delta: 0.4
+
   se:
     _type_: sp.se
     seed: ???
@@ -165,6 +180,7 @@ sp:
 setups:
   rate_ann:
     input_mode: rate
+    # classifier_symexp_logits: True
     encoding_sds: [125, 1]
   rate_ann_2k:
     input_mode: rate
@@ -172,56 +188,47 @@ setups:
   rate_soft_hebb:
     encoder: sp.soft_hebb
     input_mode: rate
-    # classifier_symexp_logits: True
     ds_norm: l2
     encoding_sds: [2000, 20]
-#    encoding_sds: [400, 6]
   rate_soft_hebb_ext:
     encoder: sp.soft_hebb_ext
     input_mode: rate
-    # classifier_symexp_logits: True
+    classifier_symexp_logits: True
     ds_norm: l2
     encoding_sds: [2000, 10]
-#    encoding_sds: [400, 4]
   rate_krotov:
     encoder: sp.krotov
     sdr_tracker: False
     input_mode: rate
-    # classifier_symexp_logits: True
     encoding_sds: [2000, 7]
-#    encoding_sds: [400, 2]
   rate_krotov_adaptive:
     _base_: setups.rate_krotov
     encoder: sp.krotov_adaptive
-  binary_htm_sp:
-    encoder: sp.htm_sp
-    input_mode: binary
-    encoding_sds: [2000, 40]
-#    encoding_sds: [400, 6]
-  binary_htm_sp_dense:
-    encoder:
-      _base_: sp.htm_sp
-      potential_synapses_ratio: 0.4
-    input_mode: binary
-    encoding_sds: [2000, 40]
-#    encoding_sds: [400, 6]
-  rate_fl_sp:
-    encoder:
-      _base_: sp.float_sp
-      output_mode: rate
-    input_mode: rate
-    # classifier_symexp_logits: True
-    encoding_sds: [2000, 25]
-#    encoding_sds: [400, 6]
-  rate_sng_sp:
+  rate_se:
     encoder:
       _base_: sp.se
       output_mode: rate
     input_mode: rate
     ds_norm: l1
-    # classifier_symexp_logits: True
     encoding_sds: [2000, 25]
-#    encoding_sds: [400, 4]
+  binary_htm_sparse:
+    encoder:
+      _base_: sp.htm_sp
+      potential_synapses_ratio: 0.05
+    input_mode: binary
+    encoding_sds: [2000, 40]
+  binary_htm_dense:
+    encoder:
+      _base_: sp.htm_sp
+      potential_synapses_ratio: 0.5
+    input_mode: binary
+    encoding_sds: [2000, 40]
+  rate_fl_sp:
+    encoder:
+      _base_: sp.float_sp
+      output_mode: rate
+    input_mode: rate
+    encoding_sds: [2000, 25]
   binary_sng_sp:
     encoder:
       _base_: sp.float_sp
