draft reworked GSE with faster activation implementation

--- a/hima/experiments/temporal_pooling/configs/se_off.yaml
+++ b/hima/experiments/temporal_pooling/configs/se_off.yaml
@@ -108,19 +108,18 @@ sp:
     # no | additive | multiplicative
     boosting_policy: multiplicative
     # powerlaw | exponential
+#    activation_func: exponential
     activation_func: powerlaw
-    # top_k | threshold_f | threshold_linear
     beta: 1.0
     beta_lr: 0.0
-    activation_policy: top_k
-    threshold: 0.0
-    threshold_lr: 0.0001
-    min_active_mass: 0.75
-    min_mass: 0.8
+    soft_extra: 1.0
+    # with respect to top K against second top K
+    beta_active_mass: [0.75, 0.94]
 
-    normalize_output: yes
+    # no | yes
+    normalize_output: no
     # E = K * (1 + e)
-    output_extra: 1.5
+    output_extra: 0.5
 
     learning_rate: 0.01
     adaptive_lr: True
@@ -256,6 +255,7 @@ setups:
       output_mode: rate
     input_mode: rate
     ds_norm: l1
+#    encoding_sds: [4000, 40]
 #    encoding_sds: [2000, 20]
     encoding_sds: [800, 10]
   binary_htm_sparse:
