--- a/hima/experiments/temporal_pooling/configs/se_off.yaml
+++ b/hima/experiments/temporal_pooling/configs/se_off.yaml
@@ -96,19 +96,23 @@ sp:
     normalize_input_p: 0.0
     # no | subtract_avg | subtract_avg_and_clip
     filter_input_policy: no
+    # weights norm [should be compatible with learning policy, i.e.
+    #   p = 1 for linear and p >= 2 for krotov]
     lebesgue_p: 1.0
     init_radius: 20.0
-    weights_bias: 0.0
     weights_distribution: normal
     inhibitory_ratio: 0.12
     persistent_signs: True
 
-    # linear | sqrt | krotov
-    match_policy: linear
+    # Weights power for matching [should be compatible with learning policy, i.e.
+    #   lebesgue_p - 1 for krotov (use ... to make it auto-induced), and
+    #   we allow any p for linear policy (however, only p = 1 is the most natural)]
+    # ... | <power>
+    match_p: ...
     # no | additive | multiplicative
     boosting_policy: multiplicative
     # powerlaw | exponential
-    activation_func: powerlaw
+    activation_policy: powerlaw
     beta: 1.0
     beta_lr: 0.0
     soft_extra: 1.0
@@ -116,8 +120,10 @@ sp:
     beta_active_mass: [0.75, 0.94]
 
     normalize_output: False
-    output_extra: 1.0
+    output_extra: 0.5
 
+    # linear | krotov
+    learning_policy: linear
     learning_rate: 0.01
     adaptive_lr: True
     # M | [M, Q]: M - hebb, Q - anti-hebb; ints or floats — absolute or relative to K
@@ -251,7 +257,7 @@ setups:
       _base_: sp.gse
       output_mode: rate
     input_mode: rate
-    ds_norm: l1
+    ds_norm: lp
 #    encoding_sds: [4000, 40]
 #    encoding_sds: [2000, 20]
     encoding_sds: [800, 10]
@@ -264,7 +270,7 @@ setups:
   binary_htm_dense:
     encoder:
       _base_: sp.htm_sp
-      potential_synapses_ratio: 0.5
+      potential_synapses_ratio: 0.9
     input_mode: binary
     encoding_sds: [2000, 40]
   rate_fl_sp:
