--- a/hima/experiments/successor_representations/configs/runner/preprint/pomdp_gridworld/gridworld_dhtm.yaml
+++ b/hima/experiments/successor_representations/configs/runner/preprint/pomdp_gridworld/gridworld_dhtm.yaml
@@ -1,7 +1,7 @@
 log: true
 visualize: false
 project_name: gridworld_pomdp_reproduce2
-run_tag: null
+run_tag: random_pos
 
 action_inertia: 1
 frame_skip: 0
