--- a/hima/experiments/successor_representations/configs/runner/gridworld.yaml
+++ b/hima/experiments/successor_representations/configs/runner/gridworld.yaml
@@ -1,7 +1,6 @@
-log: True
-visualize: False
-project_name: gridworld_dhtm_agent_test
-run_tag: test1
+log: true
+project_name: gridworld_dhtm_memory_test
+run_tag: resampling_study7
 
 action_inertia: 1
 frame_skip: 0
@@ -19,14 +18,14 @@ strategies: null
 #  - [ 0, 0, 2, 2, 1, 3, 0, 0, 1, 3, 3, 0 ]
 #  - [ 2, 0, 2, 0, 2, 0, 2, 3, 0, 3, 0, 2 ]
 #  - [ 0, 2, 3, 3, 2, 3, 0, 0, 0, 2, 0, 1 ]
-observe_actions: True
-reward_free: False
+observe_actions: true
+reward_free: true
 
 setup: blocked
 
 scenario: 'configs/scenario/gridworld_pomdp_chenv_dhtm.yaml'
 env_conf: 'configs/environment/gridworld/pomdp.yaml'
-agent_conf: 'configs/agent/bio/gridworld_pomdp.yaml'
+agent_conf: 'configs/agent/bio/gridworld_pomdp_dhtm.yaml'
 metrics_conf: 'configs/metrics/bio/gridworld_pomdp.yaml'
 
 seed: null
