--- a/hima/experiments/successor_representations/configs/runner/preprint/animalai_dhtm.yaml
+++ b/hima/experiments/successor_representations/configs/runner/preprint/animalai_dhtm.yaml
@@ -1,19 +1,19 @@
-log: True
-visualize: False
+log: false
+visualize: false
 project_name: animalai_reproduce
 run_tag: null
 
 action_inertia: 1
 frame_skip: 3
 strategies: null
-observe_action: True
-reward_free: False
+observe_action: true
+reward_free: false
 
 setup: custom/free10x10.yaml
 
 scenario: 'configs/scenario/animalai.yaml'
 env_conf: 'configs/environment/animalai/default.yaml'
-agent_conf: 'configs/agent/bio/animalai.yaml'
-metrics_conf: 'configs/metrics/bio/animalai.yaml'
+agent_conf: 'configs/agent/bio/animalai_dhtm.yaml'
+metrics_conf: 'configs/metrics/bio/animalai_dhtm.yaml'
 
 seed: null
