--- a/hima/experiments/successor_representations/configs/runner/preprint/animalai_dhtm.yaml
+++ b/hima/experiments/successor_representations/configs/runner/preprint/animalai_dhtm.yaml
@@ -1,6 +1,6 @@
-log: false
+log: true
 visualize: false
-project_name: animalai_reproduce
+project_name: animalai_reproduce2
 run_tag: null
 
 action_inertia: 1
