--- a/hima/experiments/successor_representations/configs/runner/preprint/animalai_lstm.yaml
+++ b/hima/experiments/successor_representations/configs/runner/preprint/animalai_lstm.yaml
@@ -1,7 +1,7 @@
 log: true
 visualize: false
-project_name: animalai_reproduce2
-run_tag: test1
+project_name: animalai_lstm_test_pretrain
+run_tag: test2
 
 action_inertia: 1
 frame_skip: 3
@@ -11,7 +11,7 @@ reward_free: false
 
 setup: custom/free10x10.yaml
 
-scenario: 'configs/scenario/animalai.yaml'
+scenario: 'configs/scenario/animalai_lstm.yaml'
 env_conf: 'configs/environment/animalai/default.yaml'
 agent_conf: 'configs/agent/bio/animalai_lstm.yaml'
 metrics_conf: 'configs/metrics/bio/animalai_lstm.yaml'
