sr experiment: update configs

--- a/hima/experiments/successor_representations/configs/runner/preprint/animalai_lstm.yaml
+++ b/hima/experiments/successor_representations/configs/runner/preprint/animalai_lstm.yaml
@@ -1,7 +1,7 @@
 log: true
 visualize: false
-project_name: animalai_lstm_test_pretrain
-run_tag: test2
+project_name: animalai_reproduce2
+run_tag: test1
 
 action_inertia: 1
 frame_skip: 3
