--- a/dhtm/experiments/successor_representations/configs/environment/gridworld/setups/free_10x10.yaml
+++ b/dhtm/experiments/successor_representations/configs/environment/gridworld/setups/free_10x10.yaml
@@ -13,7 +13,7 @@ room: [
   ],
   [
     [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-    [ 1, 0, 0, 0, 0, 0, 0, 0, 0, 0],
+    [ 10, 0, 0, 0, 0, 0, 0, 0, 0, 0],
     [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
     [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
     [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
@@ -36,4 +36,4 @@ room: [
     [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
   ]
 ]
-default_reward: -0.001
+start_position: [9, 0]
