--- a/dhtm/experiments/successor_representations/configs/metrics/ec/gridworld_pomdp.yaml
+++ b/dhtm/experiments/successor_representations/configs/metrics/ec/gridworld_pomdp.yaml
@@ -44,6 +44,9 @@ episodic_scalar_metrics:
       layer/num_clones:
         agg: np.mean
         att: agent.agent.total_num_clones
+      layer/dict_size:
+        agg: np.mean
+        att: agent.agent.dict_size
     update_step: episodes
     update_period: 1
     log_step: episodes
