sr experiment: update configs

--- a/dhtm/experiments/successor_representations/configs/scenario/gridworld_pomdp_chenv_ec.yaml
+++ b/dhtm/experiments/successor_representations/configs/scenario/gridworld_pomdp_chenv_ec.yaml
@@ -24,3 +24,8 @@
   params:
     setup: blocked
     setup_id: 1
+
+#- condition: ['setup_episodes', 'equal', 0, 'repeat']
+#  check_every: 'episodes'
+#  action: reset_model
+#  params: {}
