--- a/hima/experiments/successor_representations/configs/environment/gridworld/setups/free_no_landmarks.yaml
+++ b/hima/experiments/successor_representations/configs/environment/gridworld/setups/free_no_landmarks.yaml
@@ -21,11 +21,11 @@ room: [
     [ 0, 0, 0, 0, 0]
   ],
   [
-    [ 1, 0, 0, 0, 1 ],
     [ 0, 0, 0, 0, 0 ],
-    [ 0, 0, 1, 0, 0 ],
     [ 0, 0, 0, 0, 0 ],
-    [ 1, 0, 0, 0, 1 ]
+    [ 0, 0, 0, 0, 0 ],
+    [ 0, 0, 0, 0, 0 ],
+    [ 0, 0, 0, 0, 0 ]
   ]
 ]
-start_position: [4, 0]
+# start_position: [4, 0]
