--- a/hima/experiments/successor_representations/configs/environment/gridworld/pomdp.yaml
+++ b/hima/experiments/successor_representations/configs/environment/gridworld/pomdp.yaml
@@ -1,9 +1,12 @@
 observation_radius: 0
-collision_hint: true
+collision_hint: false
 collision_reward: -0.1
 default_reward: -0.02
 random_floor_colors: true
+n_random_colors: 10
+markov_radius: 0
 headless: true
 # seed: 192410450
 # seed: 257209842
 # seed: 223
+# seed: 123
