--- a/hima/experiments/successor_representations/configs/metrics/ec/gridworld_pomdp_gen.yaml
+++ b/hima/experiments/successor_representations/configs/metrics/ec/gridworld_pomdp_gen.yaml
@@ -17,27 +17,36 @@ setup:
 #      layer/second_level_transitions:
 #        att: agent.agent.draw_transition_graph
 #    update_step: episodes
-#    update_period: 500
+#    update_period: 100
 #    log_step: episodes
-#    log_period: 500
+#    log_period: 100
 #    log_fps: 5
 
 step_scalar_metrics:
   class: ScalarMetrics
   params:
     metrics:
-      sf/steps:
+#      sf/steps:
+#        agg: np.mean
+#        att: agent.agent.sf_steps
+#      sf/goal_found:
+#        agg: np.mean
+#        att: agent.goal_found
+      layer/first_order_error:
         agg: np.mean
-        att: agent.agent.sf_steps
-      sf/goal_found:
+        att: agent.agent.first_order_error
+      layer/first_order_acc:
         agg: np.mean
-        att: agent.goal_found
-      layer/first_level_err:
+        att: agent.agent.first_order_acc
+      layer/first_level_acc:
         agg: np.mean
-        att: agent.agent.first_level_error
+        att: agent.agent.first_level_acc
       layer/second_level_err:
         agg: np.mean
         att: agent.agent.second_level_error
+      layer/second_level_acc:
+        agg: np.mean
+        att: agent.agent.second_level_acc
       layer/first_level_none:
         agg: np.mean
         att: agent.agent.first_level_none
@@ -59,18 +68,18 @@ episodic_scalar_metrics:
   class: ScalarMetrics
   params:
     metrics:
-      main_metrics/steps:
-        agg: np.mean
-        att: steps
-      main_metrics/episodic_reward:
-        agg: np.mean
-        att: episodic_reward
-      main_metrics/total_reward:
-        agg: np.mean
-        att: total_reward
-      main_metrics/total_steps:
-        agg: np.mean
-        att: total_steps
+#      main_metrics/steps:
+#        agg: np.mean
+#        att: steps
+#      main_metrics/episodic_reward:
+#        agg: np.mean
+#        att: episodic_reward
+#      main_metrics/total_reward:
+#        agg: np.mean
+#        att: total_reward
+#      main_metrics/total_steps:
+#        agg: np.mean
+#        att: total_steps
       layer/num_clones:
         agg: np.mean
         att: agent.agent.total_num_clones
@@ -78,6 +87,18 @@ episodic_scalar_metrics:
     update_period: 1
     log_step: episodes
     log_period: 1
+
+#rare_scalar_metrics:
+#  class: ScalarMetrics
+#  params:
+#    metrics:
+#      layer/structure_index:
+#        agg: np.mean
+#        att: agent.agent.structured_index
+#    update_step: episodes
+#    update_period: 100
+#    log_step: episodes
+#    log_period: 100
 
 cluster_metrics:
   class: ScalarMetrics
@@ -90,20 +111,20 @@ cluster_metrics:
         agg: np.mean
         att: agent.agent.average_cluster_size
     update_step: episodes
-    update_period: 10
-    log_step: episodes
-    log_period: 10
-
-trajectory:
-  class: Histogram
-  params:
-    name: agent/trajectory
-    att: state_visited
-    normalized: true
-    update_step: steps
     update_period: 1
     log_step: episodes
-    log_period: 100
+    log_period: 1
+
+#trajectory:
+#  class: Histogram
+#  params:
+#    name: agent/trajectory
+#    att: state_visited
+#    normalized: true
+#    update_step: steps
+#    update_period: 1
+#    log_step: episodes
+#    log_period: 200
 
 state_error:
   class: Histogram
@@ -114,47 +135,89 @@ state_error:
     update_step: steps
     update_period: 1
     log_step: episodes
-    log_period: 100
+    log_period: 200
+
+#state_size:
+#  class: Histogram
+#  params:
+#    name: layer/state_size
+#    att: state_size
+#    normalized: true
+#    update_step: steps
+#    update_period: 1
+#    log_step: episodes
+#    log_period: 200
 
 state_prediction:
   class: Histogram
   params:
-    name: layer/prediction_size
+    name: layer/prediction_none
     att: state_prediction
     normalized: true
     update_step: steps
     update_period: 1
     log_step: episodes
-    log_period: 100
+    log_period: 200
 
 cluster_purity:
-  class: EClusterPurity
+  class: EClusterMetrics
   params:
-    name: agent/cluster_purity
+    name: clusters
     state_att: state
     update_step: steps
     update_period: 1
     log_step: episodes
-    log_period: 10
+    log_period: 50
 
-cluster_true_sim:
-  class: ECTrueClusterSim
-  params:
-    name: cluster_true_sim
-    state_att: state
-    update_step: steps
-    update_period: 1
-    log_step: episodes
-    log_period: 100
+#sim_dists:
+#  class: Distribution
+#  params:
+#    metrics:
+#      layer/sf_sim_dist:
+#        att: agent.agent.sf_merge_threshold.current_value
+#    update_step: episodes
+#    update_period: 10
+#    log_step: episodes
+#    log_period: 200
+#    is_cumulative: True
 
-cluster_similarity:
-  class: EClusterSimilarity
-  params:
-    name: cluster_similarity
-    update_step: episodes
-    update_period: 100
-    log_step: episodes
-    log_period: 100
+#cluster_true_sim:
+#  class: ECTrueClusterSim
+#  params:
+#    name: cluster_true_sim
+#    state_att: state
+#    metric: euc
+#    embedding_type: sf
+#    mode: sampled
+#    iterations: 1000
+#    update_step: steps
+#    update_period: 1
+#    log_step: episodes
+#    log_period: 200
+#
+#cluster_true_sim_att:
+#  class: ECTrueClusterSim
+#  params:
+#    name: cluster_true_sim_att
+#    state_att: state
+#    metric: euc
+#    embedding_type: sf
+#    mode: sampled_averaged
+#    iterations: 1000
+#    update_step: steps
+#    update_period: 1
+#    log_step: episodes
+#    log_period: 200
+#
+#cluster_similarity:
+#  class: EClusterSimilarity
+#  params:
+#    name: cluster_similarity
+#    metric: euc
+#    update_step: episodes
+#    update_period: 100
+#    log_step: episodes
+#    log_period: 200
 
 #value_function:
 #  class: Histogram
