--- a/hima/experiments/successor_representations/configs/scenario/gridworld_pomdp_ec_gen.yaml
+++ b/hima/experiments/successor_representations/configs/scenario/gridworld_pomdp_ec_gen.yaml
@@ -10,14 +10,20 @@
   check_every: 'episodes'
   action: switch_logging
   params: {}
+
+# switch learning off
+#- condition: ['episodes', 'equal', 200, 'norepeat']
+#  check_every: 'episodes'
+#  action: set_parameters
+#  params:
+#    agent.learn: false
+
 #- condition: ['episodes', 'equal', 500, 'norepeat']
 #  check_every: 'episodes'
-#  action: agent.agent.sleep_phase
-#  params:
-#    clustering_iterations: 10000
+#  action: save_agent
+#  params: {'dir_path': 'logs'}
 
-#- condition: ['steps', 'mod', 1000, 'repeat']
-#  check_every: 'steps'
-#  action: agent.agent.sleep_phase
-#  params:
-#    sleep_iterations: 100
+#- condition: ['episodes', 'equal', 1000, 'norepeat']
+#  check_every: 'episodes'
+#  action: agent.save_experience
+#  params: {'path': 'logs', 'prefix': '1k_ep_10x10_10col_free_pos_s2_'}
